# siamese_network

./: .gitignore  README.md  explore.ipynb  main.py  pyproject.toml
logs/lightning_logs/version_0/: metrics.csv
src/: experiment.py  helper_functions.py  main.py  siamese_helper_functions.py  siamese_network.py  siamese_v2.py
